@@ -59,22 +59,36 @@ PrepareGCCConfigureOpts()
 
 PrepareLibTypeOpts()
 {
-    local LIB_TYPE="${DEFAULT_LIB_TYPE}"
-    [ ! -z "${1}" ] && LIB_TYPE="${1}"
+    if [ ! -z "${1}" ]
+    then
+        local LIB_TYPE="${1}"
+    elif IsStaticPackage
+    then
+        local LIB_TYPE="static"
+    else
+        local LIB_TYPE="shared"
+    fi
+
     if [ "${LIB_TYPE}" = "static" ]
     then
         LIB_TYPE_OPTS="--enable-static --disable-shared"
-        CMAKE_STATIC_BOOL=ON
-        CMAKE_SHARED_BOOL=OFF
+        AUTOTOOLS_STATIC_STR="--enable-static"
+        AUTOTOOLS_SHARED_STR="--disable-shared"
+        CMAKE_STATIC_BOOL="ON"
+        CMAKE_SHARED_BOOL="OFF"
     elif [ "${LIB_TYPE}" = "both" ]
     then
         LIB_TYPE_OPTS="--enable-static --enable-shared"
-        CMAKE_STATIC_BOOL=OFF
-        CMAKE_SHARED_BOOL=ON
+        AUTOTOOLS_STATIC_STR="--enable-static"
+        AUTOTOOLS_SHARED_STR="--enable-shared"
+        CMAKE_STATIC_BOOL="ON"
+        CMAKE_SHARED_BOOL="ON"
     else
         LIB_TYPE_OPTS="--enable-shared --disable-static"
-        CMAKE_STATIC_BOOL=ON
-        CMAKE_SHARED_BOOL=ON
+        AUTOTOOLS_STATIC_STR="--disable-static"
+        AUTOTOOLS_SHARED_STR="--enable-shared"
+        CMAKE_STATIC_BOOL="OFF"
+        CMAKE_SHARED_BOOL="ON"
     fi
 }
 
