@@ -197,6 +197,17 @@ CheckDependencies()
     fi
 }
 
+IsStaticPackage()
+{
+    [ "${DEFAULT_LIB_TYPE}" = "static" ] && return 0 || true
+
+    for STATIC_PKG in ${STATIC_PKG_LIST}
+    do
+        [ "${STATIC_PKG}" = "${PKG}" ] && return 0 || true
+    done
+    return 1
+}
+
 IsVer1GreaterOrEqualToVer2()
 {
     [ "${1}" = "$(echo -e "${1}\n${2}" | sort -V | tail -n1)" ] && \
