@@ -1,6 +1,8 @@
 --- v3.1 (2018-xx-xx) ---
+* Add possibility to build manually selected list of static libraries in
+  environments with shared libraries. See STATIC_PKG_LIST in settings.sh.
 * Add USE_JPEG_TURBO variable to all configs: set it to "true" for using of
-  libjpeg-turbo library instead of jpeg.
+  libjpeg-turbo library instead of jpeg library.
 
 --- v3.0 (2018-02-01) ---
 * Add checkup of checksums for all tarballs with sources. Only size of tarballs
